# edinworld

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_evidence_chat_tables.py
deploy/: docker-compose.prod.yml
frontend/: nginx.conf  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/context/: ChapterContext.tsx  WorldContext.tsx
frontend/src/hooks/: useChapter.ts  useChat.ts
frontend/src/layouts/: ThreePanelLayout.tsx
src/canon/: config.py  database.py
src/canon/api/: app.py
src/canon/models/: __init__.py  answer_packet.py  base.py  canon_branch.py  canon_dependency.py  canon_score.py  canon_support_link.py  canonical_actor.py  canonical_chapter.py  canonical_epoch.py  canonical_event.py  canonical_place.py  canonical_story_thread.py  change_event.py  chapter_artifact_set.py  chapter_context_set.py  chapter_focus_object.py  chapter_image_set.py  chapter_source_set.py  chat_session.py  enums.py  extracted_hint.py  motif.py  narration_packet.py  system_a.py  world_job.py  world_packet.py
src/canon/queue/: manager.py
src/canon/schemas/: canonical.py
src/canon/services/: canon_synth.py  canon_update.py  change_detect.py  chapter_builder.py  chat_answer_builder.py  evidence_bundle_builder.py  impact_resolver.py  knowledge_prep.py  merge_service.py  motif_service.py  narration_builder.py  scoring_service.py  source_record_synth.py  world_packet_builder.py
src/canon/workers/: base.py  canon_synth_worker.py  (+6 more)
(+39 files in other folders)
